aws-kube-tf-kubernetes/modules/network/vpc.tf

# Create a VPC to launch our instances into
resource "aws_vpc" "kubernetes" {
  assign_generated_ipv6_cidr_block = true
  cidr_block                       = var.vpc_cidr

  tags = {
    Name = "${var.project_name}"
  }
}
